# bspice

./: .gitignore  CMakeLists.txt  README.md
doc/: TOKEEP_LINKS.txt
src/: .cproject  .project  base_types.hpp  bspice.cpp  bspice.hpp  matrix_types.hpp  simulator_codes.hpp  simulator_types.hpp
src/circuit_elements/: capacitor.hpp  circuit.cpp  circuit.hpp  circuit_elements.hpp  coil.hpp  ics.hpp  ivs.hpp  node2_dev.hpp  node2dev.hpp  node2s_dev.hpp  node4_dev.hpp  node4dev.hpp  resistor.hpp  source_spec.hpp
src/gui/: CMakeLists.txt
src/gui/source/: main.cpp
src/lib/Eigen/src/KLUSupport/: KLUSupport.h
src/plot/: plot.cpp  plot.hpp
src/simulator/: mna.cpp  mna.hpp  sim_engine.cpp  sim_engine.hpp
src/solver/: mna.cpp  mna.hpp
src/util/: math_util.hpp  parser.cpp  parser.hpp  syntax_parser.cpp  syntax_parser.hpp
